<resources>
    <string name="app_name">munakello 🐔🍳🐣 1.0</string>
    <string name="ohjeruutu">Anna minuutit</string>
    <string name="nollat">00:00</string>
    <string name="kaynnista">Käynnistä</string>
    <string name="nollaa">Nollaa</string>
    <string name="pauseta">Pauseta</string>
    <string name="otsikko">Munakello on hyödyllinen apuväline esimerkiksi munien keittoon...</string>
    <string name="set">Aseta</string>
</resources>
